--- a/css/estiloconfirma.css
+++ b/css/estiloconfirma.css
@@ -1,74 +1,136 @@
-*{
-	box-sizing:border-box;
-	margin: 0;
-	padding: 0;
-	
+:root {
+  --primary-color: #004877;
+  --font-principal: "Avenir";
 }
-html{
-	font-family: 'Roboto', sans-serif;
-	font-size: 62.5%;
-}
-body{
-	background-color: #225475;
-	
-}
-.container__principal{
-	width: 90%;
-	height: 500px;
-	background-color:rgba(255, 255, 255, 0.15);
-	border-radius: 10px;
-	border:1px solid white;
-	margin:100px auto;
-	
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.container__principal--title{
-	font-size: 1.8rem;
-	color: white;
-	margin: 30px 0 50px 0;
-	text-align: center;
+html {
+  font-size: 62.5%;
 }
-.container__principal--warnings{
-	list-style:circle;
-	color: white;
-	font-size: 1.6rem;
-	padding: 0 10px 0 10px;
-	margin: 20px 0 10px 20px;	
+.container__principal {
+  background-color: white;
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+}
+.container__principal--title {
+  width: 100%;
+  height: 90px;
+  display: flex;
+  margin-top: 30px;
+}
+.container__principal--title-logo {
+  width: 180px;
+  height: 60px;
+  margin-left: 10px;
+}
+.container__principal--title-terminos {
+  text-align: center;
+  font-family: var(--font-principal);
+  color: var(--primary-color);
+  font-size: 2.2rem;
+}
+.container__principal--title-atencion {
+  width: 100%;
+  height: 40px;
+  background-color: var(--primary-color);
+  color: white;
+  font-family: var(--font-principal);
+  font-size: 1.8rem;
+  text-align: center;
+  padding-top: 10px;
+  margin-bottom: 40px;
 }
 
-.container__principal--form{
-	margin-top: 60px;
-	display: flex;
-	justify-content: center;
-	
-	
+.container__principal--warningslist{
+  width: 100%;
+  height: auto;
+  padding: 0 15px 0 25px;
+  font-family: var(--font-principal);
+  font-size: 1.6rem;
+  font-weight: lighter;
+  text-align: left;
+  margin-top: 5px;
+}
+.container__principal--warningslist li {
+  margin-top: 10px;
+}
+.container__principal--form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 30px;
+}
+.container__principal--form-button {
+  width: 160px;
+  padding: 5px 25px;
+  margin: 20px auto;
+  font-family: var(--font-principal);
+  font-size: 1.6rem;
+  color: white;
+  background-color: var(--primary-color);
+  outline: inherit;
+  border: none;
+  border-radius: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-box-shadow: -1px 6px 10px -6px rgba(0, 0, 0, 0.51);
+  box-shadow: -1px 6px 10px -6px rgba(0, 0, 0, 0.51);
 }
 
-.container__principal--form-button{
-	width: 150px;
-	height: 35px;
-	margin:30px 10px 0 10px;
-	background-color:rgba(255, 255, 255, 0.3);
-	color: white;
-	border:1px solid white;
-	border-radius: 7px;
-	-webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.08);
-	-moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.08);
-	box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.08);
-
-}
-.container__principal--form-button:hover{
-	margin:25px 10px;
-	height: 46px;
-	color:#225475;
-	border:1px solid #225475;
-	background-color: white;
-	font-size: 1.7rem;	
-	font-weight: bold;
-	
-}
-@media (min-width: 600px){
-	.container__principal{
-		width: 500px;
-	}
+@media (min-width: 1024px) {
+  html {
+    background-color: var(--primary-color);
+  }
+  body {
+    background-image: url("./fondo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+  }
+  .container__principal {
+    background-color: white;
+    width: 900px;
+    height: 100vh;
+    margin: 0 auto;
+  }
+  .container__principal--title {
+    margin: 0;
+    padding: 40px 0;
+    height: 180px;
+  }
+  .container__principal--title-terminos {
+    padding: 40px 150px;
+    padding-left: 70px;
+    font-size: 4rem;
+    padding-top: 10px;
+  }
+  .container__principal--title-logo {
+    margin: auto;
+    margin-left: 90px;
+    width: 420px;
+    height: 110px;
+  }
+  .container__principal--title-atencion {
+    height: 60px;
+    font-size: 3.2rem;
+    padding-top: 10px;
+    font-weight: 100;
+  }
+  .container__principal--warningslist {
+    margin-top: 40px;
+    font-size: 1.8rem;
+    font-weight: 500;
+    padding-left: 90px;
+    text-align: left;
+  }
 }
